# pipa

./: .gitignore  ACCEPTANCE.md  Caddyfile.example  Cargo.toml  LICENSE  README.md  install.sh  mise.toml  package.json  pages.example.toml
.github/workflows/: pages.yml  release.yml
crates/gapes-adapters/: Cargo.toml
crates/gapes-adapters/migrations/: 0002_pairing_payload.sql  0004_owner_sessions.sql  0005_admins.sql
crates/gapes-adapters/src/: lib.rs
crates/gapes-adapters/src/crypto/: hmac_key.rs  mod.rs
crates/gapes-adapters/src/disk/: mod.rs  storage.rs
crates/gapes-adapters/src/sqlite/: auth.rs  mapping.rs  mod.rs  pool.rs  repository.rs
crates/gapes-adapters/tests/: auth.rs  crypto.rs  disk.rs  repository.rs
crates/gapes-adapters/tests/common/: mod.rs
crates/gapes-cli/: Cargo.toml
crates/gapes-cli/src/: browser.rs  cli.rs  config.rs  main.rs  output.rs  stepup.rs
crates/gapes-cli/src/commands/: activity.rs  comments.rs  concepts.rs  deploy.rs  devices.rs  get.rs  login.rs  logout.rs  ls.rs  mod.rs  rm.rs  server.rs  share.rs  stats.rs  whoami.rs
crates/gapes-cli/src/credstore/: age.rs  env.rs  file.rs  keyring.rs  mod.rs  pass.rs
crates/gapes-core/: Cargo.toml
crates/gapes-core/src/: device.rs  lib.rs  ports.rs
crates/gapes-sdk/: Cargo.toml  LICENSE
crates/gapes-sdk/src/: auth.rs  client.rs  error.rs  lib.rs  models.rs
crates/gapes-sdk/tests/: client.rs
crates/gapes-server/: Cargo.toml
crates/gapes-server/src/: cli.rs  lib.rs  main.rs  serve.rs  state.rs
crates/gapes-server/src/auth/: mod.rs  owner_cookie.rs
crates/gapes-server/src/middleware/: mod.rs  rate_limit.rs
crates/gapes-server/src/routes/: mod.rs  public.rs  stubs.rs
crates/gapes-server/src/routes/admin/: activity.rs  assets.rs  dashboard.rs  mod.rs  pages.rs  session.rs
crates/gapes-server/src/routes/auth/: cli_page.rs  device_flow.rs  mod.rs  setup_page.rs
crates/gapes-server/src/routes/comments/: mod.rs  moderation.rs  public.rs  sanitize.rs  widget.rs
crates/gapes-server/src/routes/pages/: access.rs  deploy.rs
crates/gapes-server/templates/: cli.html  cli_approved.html  cli_error.html  confirm.html  confirm_consumed.html  confirm_done.html  confirm_expired.html  gate.css  setup.html  setup_claimed.html
crates/gapes-server/templates/admin/: activity.html  base.html  dashboard.html  devices.html  login.html  page_detail.html
crates/gapes-server/templates/partials/: brand.html
crates/gapes-server/tests/: auth_scopes.rs  comments_e2e.rs  deploy_e2e.rs  static_hosting.rs
crates/gapes-server/tests/common/: mod.rs
crates/pipa-adapters/: Cargo.toml
crates/pipa-adapters/migrations/: 0001_init.sql  0003_page_csp.sql  0005_admins.sql  0006_pages_archived.sql  0007_comment_anchors.sql  0008_page_access_zone.sql  0009_hits_kind.sql  0010_users.sql  0011_workspaces.sql
crates/pipa-adapters/src/: lib.rs
crates/pipa-adapters/src/config/: loader.rs  mod.rs
crates/pipa-adapters/src/crypto/: passwords.rs
crates/pipa-adapters/tests/: auth.rs  crypto.rs  disk.rs  repository.rs
crates/pipa-cli/: Cargo.toml
crates/pipa-cli/src/: cli.rs  config.rs  main.rs  manifest.rs  qr.rs  stepup.rs
crates/pipa-cli/src/commands/: activity.rs  comments.rs  concepts.rs  deploy.rs  devices.rs  get.rs  login.rs  logout.rs  ls.rs  mod.rs  rm.rs  server.rs  share.rs  stats.rs  transfer.rs  whoami.rs  workspace.rs
crates/pipa-cli/src/credstore/: age.rs  cmd.rs  env.rs  file.rs  keyring.rs  mod.rs  pass.rs
crates/pipa-core/: Cargo.toml
crates/pipa-core/src/: audit.rs  comment.rs  device.rs  error.rs  hit.rs  ids.rs  lib.rs  page.rs  ports.rs  tests.rs  time.rs  user.rs  workspace.rs
crates/pipa-sdk/: Cargo.toml
crates/pipa-sdk/src/: client.rs  comments.rs  devices.rs  error.rs  lib.rs  meta.rs  models.rs  pages.rs  workspaces.rs
crates/pipa-sdk/tests/: client.rs
crates/pipa-server/: Cargo.toml
crates/pipa-server/src/: cli.rs  error.rs  ip_hash.rs  lib.rs  main.rs  serve.rs  state.rs  thumbnails.rs
crates/pipa-server/src/auth/: extractor.rs  mod.rs  owner_cookie.rs  scope.rs  tokens.rs  user_cookie.rs
crates/pipa-server/src/middleware/: forwarded.rs  headers.rs  mod.rs  zone.rs
crates/pipa-server/src/routes/: account.rs  devices.rs  health.rs  meta.rs  mod.rs  public.rs  root.rs  stubs.rs  workspaces.rs  workspaces_ui.rs
crates/pipa-server/src/routes/admin/: activity.rs  assets.rs  dashboard.rs  devices.rs  mod.rs  page_actions.rs  session.rs  thumb.rs
crates/pipa-server/src/routes/auth/: cli_page.rs  confirm_page.rs  device_flow.rs  logout.rs  mint.rs  mod.rs  oauth.rs  setup_page.rs  stepup.rs  user_pages.rs
crates/pipa-server/src/routes/comments/: mod.rs  moderation.rs  public.rs  widget.rs
crates/pipa-server/src/routes/pages/: access.rs  delete.rs  deploy.rs  list_get.rs  mod.rs  stats.rs  transfer.rs  util.rs  visibility.rs
crates/pipa-server/templates/: account.html  cli.html  cli_approved.html  cli_error.html  confirm.html  confirm_consumed.html  confirm_done.html  confirm_expired.html  password_gate.html  setup.html  setup_claimed.html  user_login.html  user_signup.html  workspaces.html
crates/pipa-server/templates/admin/: activity.html  base.html  dashboard.html  devices.html  login.html  page_detail.html
crates/pipa-server/templates/partials/: brand.html  icons.html
crates/pipa-server/tests/: admin_archive_delete.rs  auth_scopes.rs  comments_e2e.rs  deploy_e2e.rs  health.rs  owner_isolation.rs  static_hosting.rs  widget_injection.rs  workspace_roles.rs
crates/pipa-server/tests/common/: mod.rs
docker/: .dockerignore  Caddyfile  Dockerfile  docker-compose.yml
docs/: admin.md  architecture.md  cli.md  comments.md  deploy.md  development.md  security.md  use-cases.md
packaging/: README.md  install.sh
packaging/systemd/: pipa-server.service
skills/gapes/: SKILL.md  server.md
skills/gapes/scripts/: agent-login.sh  agent-stepup.sh
skills/pipa/: SKILL.md  server.md
skills/pipa/scripts/: agent-login.sh  agent-stepup.sh
ui/public/admin/: admin.css  admin.js
ui/widget/: comments.css  comments.js
(+5 files in other folders)
