[workspace]
resolver = "2"
members = [
    "crates/gapes-core",
    "crates/gapes-adapters",
    "crates/gapes-server",
    "crates/gapes-cli",
    "crates/gapes-sdk",
]

[workspace.package]
edition = "2024"
rust-version = "1.94"
authors = ["Fernando Guisso <fguisso@gmail.com>"]
repository = "https://github.com/fguisso/gapes"
homepage = "https://github.com/fguisso/gapes"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "multipart"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "chrono"] }
thiserror = "1"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["serde"] }

# Phase 1 specific
argon2 = "0.5"
askama = "0.12"
keyring = "3"
rust-embed = { version = "8", features = ["debug-embed"] }
qrcode = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }

# Comments
ammonia = "4"
pulldown-cmark = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
