[workspace]
resolver = "2"
members = [
    "crates/pipa-core",
    "crates/pipa-adapters",
    "crates/pipa-server",
    "crates/pipa-cli",
    "crates/pipa-sdk",
]

[workspace.package]
edition = "2024"
rust-version = "1.94"
authors = ["Fernando Guisso <fguisso@gmail.com>"]
repository = "https://github.com/fguisso/pipa"
homepage = "https://github.com/fguisso/pipa"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "multipart"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "chrono"] }
thiserror = "1"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["serde"] }

# Crypto / encoding shared between adapters and (later) other crates
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
chacha20poly1305 = "0.10"
hmac = "0.12"
mime_guess = "2"
axum-extra = { version = "0.9", features = ["cookie"] }
zip = "2"

# Phase 1 specific
argon2 = "0.5"
askama = "0.12"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
rust-embed = { version = "8", features = ["debug-embed"] }
qrcode = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }

# Comments
ammonia = "4"
pulldown-cmark = "0.12"

# CLI specific
dialoguer = "0.11"
indicatif = "0.17"
dirs = "5"
which = "6"
nu-ansi-term = "0.50"
tabled = "0.15"
url = "2"
futures-util = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
