[package]
name = "gapes-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license = "AGPL-3.0-or-later"
description = "Storage, repository and auth adapters for gapes"

[dependencies]
gapes-core = { path = "../gapes-core" }
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true
