[package]
name = "gapes-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license = "AGPL-3.0-or-later"
description = "Storage, repository and auth adapters for gapes"

[dependencies]
gapes-core = { path = "../gapes-core" }
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
bytes.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
