[package]
name = "pipa-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license = "AGPL-3.0-or-later"
description = "pipa HTTP server"

[[bin]]
name = "pipa-server"
path = "src/main.rs"

[dependencies]
pipa-core = { path = "../pipa-core" }
pipa-adapters = { path = "../pipa-adapters" }

ammonia.workspace = true
anyhow.workspace = true
argon2.workspace = true
askama.workspace = true
axum.workspace = true
bytes.workspace = true
pulldown-cmark.workspace = true
qrcode.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

[features]
default = []
# Phase 5 toggles, not implemented yet:
multi-tenant = []
pg = []
s3 = []
redis = []
billing = []
