[package]
name = "pipa-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license = "AGPL-3.0-or-later"
description = "pipa HTTP server"

[lib]
name = "pipa_server"
path = "src/lib.rs"

[[bin]]
name = "pipa-server"
path = "src/main.rs"

[dependencies]
pipa-core = { path = "../pipa-core" }
pipa-adapters = { path = "../pipa-adapters" }

ammonia.workspace = true
anyhow.workspace = true
argon2.workspace = true
askama.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
bytes.workspace = true
clap.workspace = true
hex.workspace = true
hmac.workspace = true
mime_guess.workspace = true
pulldown-cmark.workspace = true
qrcode.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
zip.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true

[features]
default = []
# Per-page network-reach gating (zone = public|private). Off by default: when
# absent the server serves every page on whatever front-end reaches it (legacy
# behavior) and carries no zone-detection middleware. Requires an internal
# reverse proxy + the [zone] config section to be useful.
zone = []
# Phase 5 toggles, not implemented yet:
multi-tenant = []
pg = []
s3 = []
redis = []
billing = []
